crates/pulsus-traceql/tests/corpus/accept/duration_lte.traceql
{ duration <= 1.5s }
