crates/pulsus-traceql/tests/corpus/reject/duration_fractional_ns.traceql
{ duration = 0.1ns }
